--- a/sqlc.yml
+++ b/sqlc.yml
@@ -8,6 +8,7 @@ sql:
         package: db
         out: ./internal/db
         sql_package: pgx/v5
+        emit_sql_as_comment: true
         overrides:
           - db_type: uuid
             go_type:
