--- a/sqlc.yml
+++ b/sqlc.yml
@@ -18,5 +18,7 @@ sql:
             go_type:
               import: time
               type: Time
-
+          - db_type: bigint
+            go_type:
+              type: int64
 
